fix: conexion api-gateway
