# users/src/user/dto/create-user.dto.ts
@@ -1,0 +1,6 @@
+export class CreateUserDto {
+  readonly name: string;
+  readonly username: string;
+  readonly email: string;
+  password: string;
+}
